@@ -37,9 +37,9 @@ interface ClientProtocol extends VersionedProtocol {
    * Compared to the previous version the following changes have been introduced:
    * (Only the latest change is reflected.
    * The log of historical changes can be retrieved from the svn).
-   * 31: changed the serialization in DatanodeRegistration and DatanodeInfo
+   * 32: add corrupt field to LocatedBlock
    */
-  public static final long versionID = 31L;
+  public static final long versionID = 32L;
   
   ///////////////////////////////////////
   // File contents
