@@ -39,24 +39,36 @@ class LocatedBlock implements Writable {
   private Block b;
   private long offset;  // offset of the first byte of the block in the file
   private DatanodeInfo[] locs;
+  // corrupt flag is true if all of the replicas of a block are corrupt.
+  // else false. If block has few corrupt replicas, they are filtered and 
+  // their locations are not part of this object
+  private boolean corrupt;
 
   /**
    */
   public LocatedBlock() {
-    this(new Block(), new DatanodeInfo[0], 0L);
+    this(new Block(), new DatanodeInfo[0], 0L, false);
   }
 
   /**
    */
   public LocatedBlock(Block b, DatanodeInfo[] locs) {
-    this(b, locs, -1); // startOffset is unknown
+    this(b, locs, -1, false); // startOffset is unknown
   }
 
   /**
    */
   public LocatedBlock(Block b, DatanodeInfo[] locs, long startOffset) {
+    this(b, locs, startOffset, false);
+  }
+
+  /**
+   */
+  public LocatedBlock(Block b, DatanodeInfo[] locs, long startOffset, 
+                      boolean corrupt) {
     this.b = b;
     this.offset = startOffset;
+    this.corrupt = corrupt;
     if (locs==null) {
       this.locs = new DatanodeInfo[0];
     } else {
@@ -88,10 +100,19 @@ class LocatedBlock implements Writable {
     this.offset = value;
   }
 
+  void setCorrupt(boolean corrupt) {
+    this.corrupt = corrupt;
+  }
+  
+  boolean isCorrupt() {
+    return this.corrupt;
+  }
+
   ///////////////////////////////////////////
   // Writable
   ///////////////////////////////////////////
   public void write(DataOutput out) throws IOException {
+    out.writeBoolean(corrupt);
     out.writeLong(offset);
     b.write(out);
     out.writeInt(locs.length);
@@ -101,6 +122,7 @@ class LocatedBlock implements Writable {
   }
 
   public void readFields(DataInput in) throws IOException {
+    this.corrupt = in.readBoolean();
     offset = in.readLong();
     this.b = new Block();
     b.readFields(in);
